{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 55,
  "lineage": "bf159183-979e-641d-05b1-c7430cc16cbe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911373407496:targetgroup/weather-service-tg/0ea0262bc8d0c602",
            "arn_suffix": "targetgroup/weather-service-tg/0ea0262bc8d0c602",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:911373407496:targetgroup/weather-service-tg/0ea0262bc8d0c602",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:911373407496:loadbalancer/app/weather-service-alb/99174ea21079c65a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "weather-service-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "weather-service-tg"
            },
            "tags_all": {
              "Name": "weather-service-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e40b0b1e3c24eb37"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:911373407496:targetgroup/weather-service-tg/0ea0262bc8d0c602"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911373407496:security-group/sg-0dd19ae5b908a5055",
            "description": "Allow inbound HTTP to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd19ae5b908a5055",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "weather-service-alb-sg",
            "name_prefix": "",
            "owner_id": "911373407496",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weather-service-alb-sg"
            },
            "tags_all": {
              "Name": "weather-service-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e40b0b1e3c24eb37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911373407496",
            "id": "sg-0dd19ae5b908a5055",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911373407496:security-group/sg-0dc61045b52154f3a",
            "description": "Allow inbound traffic from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc61045b52154f3a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App port from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dd19ae5b908a5055"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "weather-service-app-sg",
            "name_prefix": "",
            "owner_id": "911373407496",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weather-service-app-sg"
            },
            "tags_all": {
              "Name": "weather-service-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e40b0b1e3c24eb37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911373407496",
            "id": "sg-0dc61045b52154f3a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911373407496:security-group/sg-08425f00ee891bee4",
            "description": "Allow Redis traffic from app instances only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08425f00ee891bee4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from app instances",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dc61045b52154f3a"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "weather-service-redis-sg",
            "name_prefix": "",
            "owner_id": "911373407496",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "weather-service-redis-sg"
            },
            "tags_all": {
              "Name": "weather-service-redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e40b0b1e3c24eb37"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911373407496",
            "id": "sg-08425f00ee891bee4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911373407496:subnet/subnet-07e21a222b8f701fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e21a222b8f701fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911373407496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "weather-service-private-subnet-1"
            },
            "tags_all": {
              "Name": "weather-service-private-subnet-1"
            },
            "vpc_id": "vpc-0e40b0b1e3c24eb37"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911373407496",
            "id": "subnet-07e21a222b8f701fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911373407496:subnet/subnet-0fb432d64c77401b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb432d64c77401b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911373407496",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "weather-service-private-subnet-2"
            },
            "tags_all": {
              "Name": "weather-service-private-subnet-2"
            },
            "vpc_id": "vpc-0e40b0b1e3c24eb37"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911373407496",
            "id": "subnet-0fb432d64c77401b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911373407496:vpc/vpc-0e40b0b1e3c24eb37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e00d61ca80136fb0",
            "default_route_table_id": "rtb-0e4774d9a2240ae93",
            "default_security_group_id": "sg-0cf319975b4a79953",
            "dhcp_options_id": "dopt-0f23d644b179169bf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e40b0b1e3c24eb37",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e4774d9a2240ae93",
            "owner_id": "911373407496",
            "region": "us-east-1",
            "tags": {
              "Name": "weather-service-vpc"
            },
            "tags_all": {
              "Name": "weather-service-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911373407496",
            "id": "vpc-0e40b0b1e3c24eb37",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}